media/prowlarr/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: &app prowlarr
  labels:
    app: *app
spec:
  progressDeadlineSeconds: 300
  replicas: 1
  serviceName: *app
  revisionHistoryLimit: 0
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:v1.29.2
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "256Mi"
              cpu: 500m
            requests:
              memory: "192Mi"
              cpu: 100m
          ports:
            - name: prowlarr-port
              containerPort: 9696
          startupProbe:
            httpGet:
              path: /prowlarr
              port: prowlarr-port
            failureThreshold: 10
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: '/prowlarr/api/v1/health?apikey=${SECRET_PROWLARR_API_KEY}'
              port: prowlarr-port
              httpHeaders:
                - name: Accept
                  value: application/json
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
            - name: prowlarr-backup
              mountPath: /backup
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
        - name: prowlarr-backup
          persistentVolumeClaim:
            claimName: prowlarr-backup-pvc
        - name: default-config
          configMap:
            name: prowlarr-config
      serviceName: *app
      revisionHistoryLimit: 5
