media/prowlarr/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`media.${SECRET_DOMAIN_0}`) && PathPrefix(`/prowlarr`)"
      kind: Rule
      services:
        - name: prowlarr-svc
          port: 80
